WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
204376
Assertion failure in HTMLMediaElement::enterFullscreen()
https://bugs.webkit.org/show_bug.cgi?id=204376
Summary
Assertion failure in HTMLMediaElement::enterFullscreen()
Peng Liu
Reported
2019-11-19 14:15:40 PST
Calling function video.webkitSetPresentationMode('inline') when the video element is in inline mode will fail at "ASSERT(mode != VideoFullscreenModeNone)" in HTMLMediaElement::enterFullscreen().
Attachments
Patch
(1.31 KB, patch)
2019-11-19 16:06 PST
,
Peng Liu
eric.carlson
: review+
Details
Formatted Diff
Diff
Patch
(3.33 KB, patch)
2019-11-19 16:57 PST
,
Peng Liu
no flags
Details
Formatted Diff
Diff
Patch
(4.15 KB, patch)
2019-11-19 17:05 PST
,
Peng Liu
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2019-11-19 14:16:20 PST
<
rdar://problem/57336207
>
Peng Liu
Comment 2
2019-11-19 15:55:38 PST
The failure only happens on iPads.
Peng Liu
Comment 3
2019-11-19 16:06:54 PST
Created
attachment 383918
[details]
Patch
Eric Carlson
Comment 4
2019-11-19 16:24:42 PST
Comment on
attachment 383918
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=383918&action=review
> Source/WebCore/ChangeLog:8 > + No new tests are required.
This should say why no new tests are required.
Peng Liu
Comment 5
2019-11-19 16:57:02 PST
Created
attachment 383924
[details]
Patch
Peng Liu
Comment 6
2019-11-19 17:05:54 PST
Created
attachment 383927
[details]
Patch
WebKit Commit Bot
Comment 7
2019-11-19 18:37:23 PST
Comment on
attachment 383927
[details]
Patch Clearing flags on attachment: 383927 Committed
r252675
: <
https://trac.webkit.org/changeset/252675
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug