Assertion failure in HTMLMediaElement::enterFullscreen() https://bugs.webkit.org/show_bug.cgi?id=204376

Patch by Peng Liu <peng.liu6@apple.com> on 2019-11-19
Reviewed by Eric Carlson.

Source/WebCore:

Test: media/video-set-presentation-mode-to-inline.html

* html/HTMLVideoElement.cpp:
(WebCore::HTMLVideoElement::setFullscreenMode):

LayoutTests:

* media/video-set-presentation-mode-to-inline-expected.txt: Added.
* media/video-set-presentation-mode-to-inline.html: Added.

Canonical link: https://commits.webkit.org/217659@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@252675 268f45cc-cd09-0410-ab3c-d52691b4dbfc